# CylindricalShells

./: .gitignore  PlotAllEigenvalues.ipynb  PlotAllStability.m  RunStabilityAll.bash  alleigs.py  plotasymdef.py  ploteigs.py
CyclindricalFull3D/: CMakeLists.txt
CyclindricalFull3D/include/: elastic_problem.h  read_file.h
CyclindricalFull3D/src/: elastic_problem.cc  reference_configuration.cc
Cylindrical3DStability/: Evalsolver.m  eigvalplotter.py
Cylindrical3DStability (copy)/: .gitignore  eigvalplotter.py
Cylindrical3DStability (copy)/include/: elastic_problem.h  internalvariable.h  read_file.h
Cylindrical3DStability (copy)/src/: elastic_problem.cc
Cylindrical3DStability/include/: elastic_problem.h  read_file.h  reference_configuration.h
Cylindrical3DStability/src/: elastic_problem.cc  read_file.cpp  reference_configuration.cc
CylindricalFiniteDifferences/: CMakeLists.txt  dat.mat  tester.m  tester.m~  tester2.m  tester3.m  tester4.m
CylindricalFiniteDifferences/fdpractice/: Runner.m  Runner2.m  ddfddu.m  ddfddupp.m  ddfdudup.m  ddfdudupp.m  ddfdupdupp.m  dfdu.m  dfdup.m  dfdupp.m  f.m  tridiag.m
CylindricalFiniteDifferences/fdpractice/model2d/: CDGradient.m  Model2d.m  Q1.m  Runner.m  calcEL.m  calcup.m  calcupp.m  dQ1dF.m  dfdu.m  dfdup.m  dfdupp.m  f.m  getrz.m  getu.m  setu.m  symmetric.m
CylindricalFiniteDifferences/hazel/: hazel.h
CylindricalFiniteDifferences/hazel/include/: Matrix.h  Vector.h
CylindricalFiniteDifferences/hazel/src/: Matrix.cpp  Vector.cpp
CylindricalFiniteDifferences/include/: DOFHandler.h  ElasticProblem.h  Element.h  LocalConstructor.h  Node.h  material_class.h  reference_configuration.h
CylindricalFiniteDifferences/src/: DOFHandler.cpp  ElasticProblem.cpp  Element.cpp  LocalConstructor.cpp  Node.cpp  main.cpp  material_class.cpp  reference_configuration.cpp
CylindricalFull3D/include/: elastic_problem.h
CylindricalFull3D/src/: elastic_problem.cc  read_file.cpp
CylindricalSystem/: CMakeLists.txt  timeseries.py
CylindricalSystem/include/: elastic_problem.h
CylindricalSystem/src/: elastic_problem.cc  reference_configuration.cc
CylindricalSystemFDStability/: CMakeLists.txt  CalcStabilityAll.m  CalcStabilityCondensed.m  CalcStabilityCondensed6D.asv  CalcStabilityCondensed6D.m  CalcStabilityCorrected.m  CalcStabilityNotExtended.m  findNmin.m  timeseries.py  x_global_to_reduced.csv  x_reduced_to_global.csv  xi_global_to_reduced.csv  xi_reduced_to_global.csv
CylindricalSystemFDStability/include/: elastic_problem.h  read_file.h
CylindricalSystemFDStability/src/: elastic_problem.cc  read_file.cpp  reference_configuration.cc
CylindricalSystemModifiedStability/include/: elastic_problem.h  reference_configuration.h
CylindricalSystemModifiedStability/src/: elastic_problem.cc  reference_configuration.cc
Writeups/formulation/: main.aux  main.out  main.tex
